# savitr-delivery-system

./: .cursorignore  .gitignore  .railwayignore  DEPLOYMENT_GUIDE.md  README.md  package-lock.json  package.json
indiapost-clone/: README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
indiapost-clone/src/: App.tsx
indiapost-clone/src/components/: Footer.tsx  LogoBar.tsx  MainUtilitySection.tsx  NavbarSidebar.tsx  NewsUpdatesSection.tsx  Slideshow.tsx  Topbar.tsx
indiapost-clone/src/config/: urls.ts
savitr-delivery-manager/: .env  .env.example  .env.local  .gitignore  README.md  next.config.js  package-lock.json  package.json
savitr-delivery-manager/src/app/: ClientBody.tsx  globals.css  layout.tsx  page.tsx
savitr-delivery-manager/src/components/: ConsignmentBookingForm.tsx  LoadingAnimation.tsx  MapTracking.tsx  SuccessAnimation.tsx  TrackingCard.tsx  TrackingMapCard.tsx
savitr-delivery-manager/src/contexts/: AuthContext.tsx
savitr-delivery-manager/src/hooks/: useWindowSize.ts
savitr-delivery-manager/src/lib/: auth.ts  db.ts  mockData.ts  mongodb.ts  (+2 more)
savitr_ai/: .env  .railwayignore  Book1.csv  Post(Post).csv  Post.csv  Procfile  app.py  config.py  data_preprocess.py  ml_models.py  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  restart.bat  savitr_sbh.ipynb  tsp.py  tsp_route.geojson  tsp_visualization.html
savitr_ai/.ipynb_checkpoints/: savitr_sbh-checkpoint.ipynb
savitr_ai/saved_models/: best_model_logistic_regression.pkl  encoders.pkl  k-nearest_neighbors_pipeline.pkl  random_forest_pipeline.pkl  xgboost_pipeline.pkl
(+79 files in other folders)
